messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your-domain.com   # Replace with your domain or use minikube ip.nip.io
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-service     # must match your Django service name
                port:
                  number: 8000
